--- a/birthday.html
+++ b/birthday.html
@@ -131,7 +131,7 @@
         <div class="image-card note" style="top: 40%; left: 50%; transform: translate(-50%, -50%) rotate(3deg);">
             <div class="tape"></div>
             <div class="tape"></div>
-            Dear Little Star,<br>
+            Dear Ullu,<br>
             Wishing you the best of luck for your Class 10th Board Exams! 🎓✨<br>
             Shine bright and make your dreams come true!
         </div>
